--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -35,7 +35,7 @@
     </div>
     <footer class="footer">
         <div class="container">
-            <div class="license">Website code licensed <a href="https://github.com/MrWillCom/rsa-site/blob/main/LICENSE">MIT</a>, RSA CLI licensed <a href="https://github.com/MrWillCom/rsa-cli/blob/main/LICENSE">MIT</a>, too.</div>
+            <div class="license">Code licensed <a href="https://github.com/MrWillCom/rsa-cli/blob/main/LICENSE">MIT</a>, docs <a href="https://creativecommons.org/licenses/by-nc/4.0/">CC BY-NC 4.0</a>.</div>
         </div>
     </footer>
     {% for script in scripts %}
