--- a/src/styles/var.css
+++ b/src/styles/var.css
@@ -15,6 +15,9 @@
     --container-max-width: 800px;
     --filter-blur: blur(32px) saturate(1.2);
 
+    --color-accent: #06c;
+    --color-accent-hover: #06c1;
+    --color-accent-active: #06c4; 
     --color-text-primary: var(--body-txt-color);
     --color-text-secondary: #676e7a;
     --color-text-tertiary: #9fa6b3;
