--- a/src/styles/docs.css
+++ b/src/styles/docs.css
@@ -8,9 +8,21 @@
     display: flex;
 }
 
+.content>.container>main {
+    max-width: 100vw;
+    width: 100%;
+}
+
 .content>.container>main>.title {
     font-size: 48px;
     margin: 84px 0;
+}
+
+.content>.container>main pre {
+    border: var(--border-primary);
+    padding: 8px;
+    border-radius: 8px;
+    margin: -8px;
 }
 
 .content>.container>.sidebar {
