--- a/src/styles/docs.css
+++ b/src/styles/docs.css
@@ -49,6 +49,7 @@
         background-color: var(--nav-bg-color);
         color: var(--color-text-secondary);
         backdrop-filter: var(--filter-blur);
+        -webkit-backdrop-filter: var(--filter-blur);
         font-size: 24px;
         line-height: 24px;
         z-index: 1000;
@@ -64,6 +65,7 @@
         overflow: hidden;
         background-color: var(--nav-bg-color);
         backdrop-filter: var(--filter-blur);
+        -webkit-backdrop-filter: var(--filter-blur);
         transition-property: height, padding;
         transition-duration: 0.35s;
         transition-timing-function: cubic-bezier(0.19, 0.45, 0.25, 1);
