--- a/src/styles/docs.css
+++ b/src/styles/docs.css
@@ -13,16 +13,52 @@
     width: 100%;
 }
 
+.content>.container>main {
+    font-size: 17px;
+    line-height: 24px;
+}
+
 .content>.container>main>.title {
     font-size: 48px;
     margin: 84px 0;
+}
+
+.content>.container>main h1, .content>.container>main h2, .content>.container>main h3, .content>.container>main h4, .content>.container>main h5, .content>.container>main h6 {
+    margin-top: 42px;
 }
 
 .content>.container>main pre {
     border: var(--border-primary);
     padding: 8px;
     border-radius: 8px;
-    margin: -8px;
+    margin: 0 -8px;
+}
+
+.content>.container>main pre code {
+    display: block;
+}
+
+.content>.container>main code {
+    font-size: 16px;
+    line-height: 20px;
+    overflow-x: auto;
+    padding: 3px 5px;
+    background: transparent;
+    color: var(--color-text-primary);
+}
+
+.content>.container>main blockquote {
+    margin-left: 0;
+    padding-left: 20px;
+    border-left: 4px solid var(--color-border-primary);
+    color: var(--color-text-secondary)
+}
+
+.content>.container>main hr {
+    height: 1px;
+    background-color: var(--color-border-primary);
+    border: none;
+    margin: 24px -8px;
 }
 
 .content>.container>.sidebar {
