--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -35,7 +35,10 @@
     </div>
     <footer class="footer">
         <div class="container">
+            <a href="/" class="icon"><img src="/assets/icon.png"></a>
             <div class="license">Code licensed <a href="https://github.com/MrWillCom/rsa-cli/blob/main/LICENSE">MIT</a>, docs <a href="https://creativecommons.org/licenses/by-nc/4.0/">CC BY-NC 4.0</a>.</div>
+            <div class="built-with">Built with <a href="https://www.11ty.dev/" target="_blank">11ty</a></div>
+            <div class="powered-by">Powered by <a href="https://vercel.com/?utm_source=mrwillcom&utm_campaign=oss" target="_blank"><svg height="14" viewBox="0 0 75 65" fill="var(--color-text-primary)" style="transform: translateY(2px)"><path d="M37.59.25l36.95 64H.64l36.95-64z"></path></svg></a></div>
         </div>
     </footer>
     {% for script in scripts %}
