--- a/src/styles/docs.css
+++ b/src/styles/docs.css
@@ -102,6 +102,7 @@
         background-color: var(--nav-bg-color);
         backdrop-filter: var(--filter-blur);
         -webkit-backdrop-filter: var(--filter-blur);
+        z-index: 1000;
         transition-property: height, padding;
         transition-duration: 0.35s;
         transition-timing-function: cubic-bezier(0.19, 0.45, 0.25, 1);
